# MaxiMeter

./: .gitignore  CMakeLists.txt  Plan.txt  README.MD  run_debug.bat
CustomComponents/: README.md  __init__.py  audio_data.py  base_component.py  bridge.py  bridge_runner.py  color.py  dependencies.py  manifest.py  properties.py  registry.py  render_context.py  shared_memory.py  test_framework.py
CustomComponents/plugins/: __init__.py  circular_spectrum.py  fractal_visualizer.py  infinite_fractal.py  loudness_history.py  particle_visualizer.py  shader_effects.py  simple_vu_meter.py
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  FFTProcessor.cpp  FFTProcessor.h  LevelAnalyzer.cpp  LevelAnalyzer.h  LoudnessAnalyzer.cpp  LoudnessAnalyzer.h  StereoFieldAnalyzer.cpp  StereoFieldAnalyzer.h
Source/Canvas/: AlignmentToolbar.cpp  AlignmentToolbar.h  CanvasCommands.h  CanvasEditor.cpp  CanvasEditor.h  CanvasItem.h  CanvasModel.cpp  CanvasModel.h  CanvasPropertyPanel.cpp  CanvasPropertyPanel.h  CanvasToolbox.cpp  CanvasToolbox.h  CanvasView.cpp  CanvasView.h  CustomPluginComponent.cpp  CustomPluginComponent.h  LayerPanel.cpp  LayerPanel.h  MeterFactory.cpp  MeterFactory.h  MeterSettingsPanel.cpp  MeterSettingsPanel.h  MiniMap.cpp  MiniMap.h  PluginRenderReplayer.h  PythonPluginBridge.cpp  PythonPluginBridge.h  ShaderLibrary.h
Source/Export/: BatchExporter.cpp  BatchExporter.h  ExportDialog.cpp  ExportDialog.h  ExportProgressWindow.cpp  ExportProgressWindow.h  ExportSettings.h  FFmpegProcess.cpp  FFmpegProcess.h  OfflineRenderer.cpp  OfflineRenderer.h  PostProcessor.h
Source/Project/: AppSettings.h  PresetTemplates.cpp  PresetTemplates.h  ProjectSerializer.cpp  ProjectSerializer.h
Source/Skin/: BitmapLoader.cpp  BitmapLoader.h  SkinModel.h  SkinParser.cpp  SkinParser.h  SkinSpriteTable.cpp  SkinTextParsers.cpp  SkinTextParsers.h  stb_image_impl.cpp
Source/UI/: BitmapFontRenderer.cpp  BitmapFontRenderer.h  ColourPickerWithEyedropper.h  CorrelationMeter.cpp  CorrelationMeter.h  DebugLogWindow.h  DocumentationWindow.h  EqualizerPanel.cpp  EqualizerPanel.h  FluentIcons.h  FontAwesomeIcons.h  Goniometer.cpp  Goniometer.h  ImageLayerComponent.h  KeyboardShortcutManager.cpp  KeyboardShortcutManager.h  LevelHistogram.cpp  LevelHistogram.h  LissajousScope.cpp  LissajousScope.h  LogWindow.h  LoudnessMeter.cpp  LoudnessMeter.h  MainWindow.cpp  MainWindow.h  MeterBase.h  MultiBandAnalyzer.cpp  MultiBandAnalyzer.h  PeakMeter.cpp  PeakMeter.h  SettingsWindow.h  ShapeComponent.h  SkeuomorphicLookAndFeel.h  SkinnedOscilloscope.cpp  SkinnedOscilloscope.h  SkinnedPlayerPanel.cpp  SkinnedPlayerPanel.h  SkinnedSpectrumAnalyzer.cpp  SkinnedSpectrumAnalyzer.h  SkinnedTitleBarLookAndFeel.h  (+19 more)
Source/Utils/: CrashHandler.cpp  CrashHandler.h
